--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="You can't go back in time to relive a moment, but you can
+               capture that moment. And with that moment...you become the creator of your own world."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
